# NetGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/client/: CMakeLists.txt  Client.cpp  Client.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  NetworkedPlayer.cpp  NetworkedPlayer.h  Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  Tile.cpp  Tile.h  main.cpp
src/server/: CMakeLists.txt  PlayerData.cpp  PlayerData.h  Server.cpp  Server.h  Utils.cpp  Utils.h  main.cpp
